I fixed the page breaks by using @page instead of the page break inside. I will have to use Sass to complete it for the 5X5 and 7X7 cards.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 }
 
 .card-wrapper{
-    display: inline-block;
+    display: block;
     margin: 10px;
     width: max-content;
     background-color: paleturquoise;
@@ -58,13 +58,12 @@ body{
 }
 
 h3{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     font-size: 28px;
-    width: auto;
-    height: 0px;
     color: black;
+    display: flex;
+    height: 0px;
+    justify-content: center;
+    align-items: center;
 }
 
 .card{
@@ -96,21 +95,19 @@ h3{
         background-color: #fff;
         float: none;
         width: 100%;
-        break-inside: avoid;
     }
 
-    /* @page { margin: 1cm } */
+    @page { 
+        margin-top: 60px;
+        margin-bottom: 60px;
+    }
 
     #title, #form{
         display: none !important;
     }
 
-    h3{
-        break-after: avoid;
-    }
-
-    table{
+    div.card-wrapper{
         display: block;
-        break-inside: avoid;
+        break-inside: avoid !important;
     }
 }
